--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Neverbland",
+  "name": "Marionette boilerplate",
   "version": "1.0.0",
   "description": "",
   "author": "Alexandre Rieux",
