--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
   "author": "Alexandre Rieux",
   "license": "BSD",
   "devDependencies": {
-    "browserify": "10.2.4",
+    "browserify": "^12.0.1",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.2.0",
-    "grunt-browserify": "3.8.0",
-    "grunt-contrib-connect": "^0.10.1",
-    "grunt-contrib-stylus": "^0.21.0",
-    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-browserify": "^4.0.1",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-stylus": "^0.22.0",
+    "grunt-contrib-uglify": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-pngmin": "^1.0.0",
+    "grunt-pngmin": "^1.0.2",
     "grunt-targethtml": "^0.2.6",
-    "hbsfy": "^2.2.1",
-    "path": "^0.11.14"
+    "hbsfy": "^2.4.1",
+    "path": "^0.12.7"
   },
   "private": true,
   "dependencies": {
-    "backbone": "1.2.1",
+    "backbone": "^1.2.3",
     "backbone.localstorage": "^1.1.16",
-    "backbone.marionette": "^2.4.1",
-    "handlebars": "^3.0.3",
-    "jquery": "^2.1.0",
+    "backbone.marionette": "^2.4.3",
+    "handlebars": "^4.0.4",
+    "jquery": "^2.1.4",
     "magnific-popup": "^1.0.0",
-    "slick-carousel": "^1.5.6",
-    "underscore": "^1.8.2"
+    "slick-carousel": "^1.5.8",
+    "underscore": "^1.8.3"
   }
 }
